# makepad-components

./: Cargo.toml  README.md  justfile  makepad-gallery.wasm.br
.github/workflows/: ci.yml  preview.yml  wasm-pages.yml
.jules/: bolt.md  palette.md
components/: Cargo.toml
components/src/: accordion.rs  alert.rs  alert_dialog.rs  breadcrumb.rs  button.rs  button_group.rs  collapsible.rs  dialog.rs  input.rs  label.rs  lib.rs  progress.rs  skeleton.rs  sonner.rs  switch.rs
gallery/: Cargo.toml
gallery/src/: app.rs  main.rs
gallery/src/ui/: accordion_page.rs  alert_dialog_page.rs  alert_page.rs  aspect_ratio_page.rs  avatar_page.rs  badge_page.rs  breadcrumb_page.rs  button_group_page.rs  button_page.rs  card_page.rs  carousel_page.rs  checkbox_page.rs  collapsible_page.rs  content_flip.rs  input_page.rs  kbd_page.rs  label_page.rs  mod.rs  progress_page.rs  root.rs  sidebar.rs  sidebar_page.rs  skeleton_page.rs  snippets.rs  sonner_page.rs  switch_page.rs  themed_widgets.rs  tooltip_page.rs
makepad-components/src/: accordion.rs  alert.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  chart.rs  collapsible.rs  context_menu.rs  date_picker.rs  dialog.rs  input_otp.rs  label.rs  lib.rs  menubar.rs  navigation_menu.rs  panel.rs  popover.rs  progress.rs  radio_group.rs  sheet.rs  sidebar.rs  skeleton.rs  sonner.rs  spinner.rs  surface.rs  table.rs  tabs.rs  textarea.rs  theme.rs  toggle.rs
makepad-gallery/: build.rs
makepad-gallery/src/: main.rs
makepad-gallery/src/ui/: card_page.rs  (+49 more)
scripts/: build_wasm.sh
(+33 files in other folders)
